# sdlc-agentic

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  build_knowledge_base.py  code_review.md  config.py  graph.py  health_server.py  how_to_add_new_coding_language.md  llm_factory.py  main.py  mcp_server.py  observability.py  pyproject.toml  requirements.txt  resilience.py  sdlc_workflow_v1.py  sdlc_workflow_v2_deprecated.py  state.py
.github/workflows/: agent-pr-validation-with-comment.yml  agent-pr-validation.yml
docs/: clean_code_guidelines.md
docs/be/: be_spring_aggregate_root.md  be_spring_api_versioning.md  be_spring_application_service.md  be_spring_archunit_rules.md  be_spring_distributed_patterns.md  be_spring_domain_event.md  be_spring_event_listener.md  (+11 more)
guideline/: agent.log.txt  backend_modulith_plan.md  career_plan.md  code_architecture.md  comands.txt  executor_prompt_review.md  hitl_implementation_plan.md  howMCPWorks.md  how_i_did_it.md  next_agentic.md  next_hitl.md  practical_system_guide.md  requirements.md  sdlc_workflow.md  stakeholder_pitch.md
nodes/: __init__.py  architect_node.py  be_executor.py  fe_executor.py  human_escalation.py  infra_executor.py  planner.py  qa_executor.py  requirements_node.py  test_executor.py
prompts/: be_executor.md  be_module_executor.md  fe_executor.md  infra_executor.md  qa_executor.md  test_executor.md
tests/: test_escalation_loop.py  test_git_tools.py  test_mcp_server.py  test_smoke.py
tools/: __init__.py  confluence.py  filesystem.py  git.py  jira.py  rag.py
(+70 files in other folders)
